Standard notice interface, fixes #1993

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -90,13 +90,6 @@ action_abort_download.key=A
 #orig#action_abort_download.name=Abort
 action_abort_download.name=Abbrechen
 
-#orig#action_activate_warning.description=Display any warnings
-action_activate_warning.description=Zeigt Warnungen
-#orig#action_activate_warning.key=W
-action_activate_warning.key=W
-#orig#action_activate_warning.name=Warning
-action_activate_warning.name=Warnung
-
 #orig#action_add_directory.description=Add directory
 action_add_directory.description=Verzeichnis hinzuf\u00fcgen
 #orig#action_add_directory.key=A
@@ -124,13 +117,6 @@ action_add_invitee.description=Eingeladenen hinzuf\u00fcgen
 action_add_invitee.key=H
 #orig#action_add_invitee.name=Add
 action_add_invitee.name=Hinzuf\u00fcgen
-
-#orig#action_ask_for_friendship.description=Request connection
-action_ask_for_friendship.description=Einladungen zu Freundesliste anzeigen
-#orig#action_ask_for_friendship.key=A
-action_ask_for_friendship.key=F
-#orig#action_ask_for_friendship.name=Ask
-action_ask_for_friendship.name=Fragen
 
 #orig#action_backup_online_storage.description=Backup this folder to Online Storage
 action_backup_online_storage.description=Diesen Folder online sichern
@@ -349,13 +335,6 @@ action_open_files_information.description=\u00d6ffnet die Dateiliste des Folders
 action_open_files_information.key=A
 #orig#action_open_files_information.name=Browse files
 action_open_files_information.name=Dateien ansehen
-
-#orig#action_open_invitation_received_wizard.description=Open the invitation received wizard
-action_open_invitation_received_wizard.description=\u00d6ffnet die Einladung
-#orig#action_open_invitation_received_wizard.key=I
-action_open_invitation_received_wizard.key=E
-#orig#action_open_invitation_received_wizard.name=Invitation
-action_open_invitation_received_wizard.name=Einladung
 
 #orig#action_open_members_information.description=Open information on members for this folder
 action_open_members_information.description=Zeigt Informationen zu den Mitgliedern
@@ -2240,14 +2219,6 @@ status_tab.last_synced=Zuletzt synchronisiert {0}
 status_tab.local=Lokal
 #orig#status_tab.never_synced=Folders never in sync
 status_tab.never_synced=Folder noch nie synchronisiert
-#orig#status_tab.new_friend_requests=New connection request(s)
-status_tab.new_friend_requests=Neue Freundschafts-Anfragen
-#orig#status_tab.new_invitations=New invitation(s)
-status_tab.new_invitations=Neue Einladung(en)
-##status_tab.new_single_file_offers=New single file offer(s)
-#orig#status_tab.new_warnings=Warning(s)
-status_tab.new_warnings=Warnung(en)
-#orig#status_tab.no_computers=No other computers known
 status_tab.no_computers=Keine anderen Computer bekannt
 #orig#status_tab.no_folders=No folders configured. Press "New Folder" to start.
 status_tab.no_folders=Keine Folder gefunden. Klick "Neuer Folder" um zu starten.
@@ -2305,7 +2276,7 @@ status_tab.you_have=Sie haben
 
 ##sync_icon_button_mini.tip=Sync folder now
 
-#orig#synchronization.notice.title=Activated transfer mode {0}
+#orig#synchronization.notices.title=Activated transfer mode {0}
 synchronization.notice.title=Transfer Modus {0} eingestellt
 #orig#synchronization.warning.automatic_deletions_notice=This mode will also sync file deletions\!
 synchronization.warning.automatic_deletions_notice=Dieser Modus synchronisiert auch Dateil\u00f6schungen\!
@@ -2447,8 +2418,6 @@ uicontroller.local_mass_delete.title=Alle Dateien gel\u00f6scht
 ##uicontroller.remote_mass_delete.warning_absolute_message=Member {0} deleted {1} or more files from folder {2}.\n\nTo protect local files, this folder's transfer mode has been changed\nfrom {3} to {4}.
 #orig#uicontroller.remote_mass_delete.warning_message=Member {0} deleted {1}% of files from folder {2}.\n\nTo protect local files, this folder's transfer mode has been changed\nfrom {3} to {4}.
 uicontroller.remote_mass_delete.warning_message=Mitglied {0} hat {1}% der Dateien in {2} gel\u00f6scht.\n\nUm die lokalen Dateien zu sch\u00fctzen wurde der Transfer Modus\nvon {3} auf {4} gestellt.
-#orig#uicontroller.remote_mass_delete.warning_title=Mass deletion detected
-uicontroller.remote_mass_delete.warning_title=L\u00f6schschutz
 
 ##uilock.dialog.error.wronglogin=Invalid username or password.
 ##uilock.dialog.exit=Exit
