--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -86,13 +86,6 @@ action_abort_download.key=A
 #orig#action_abort_download.name=Abort
 action_abort_download.name=Annulla
 
-#orig#action_activate_warning.description=Display any warnings
-action_activate_warning.description=Mostra tutti gli avvisi
-#orig#action_activate_warning.key=W
-action_activate_warning.key=W
-#orig#action_activate_warning.name=Warning
-action_activate_warning.name=Avviso
-
 #orig#action_add_directory.description=Add directory
 action_add_directory.description=Aggiungi directory
 #orig#action_add_directory.key=A
@@ -120,13 +113,6 @@ action_add_invitee.description=Aggiungi invito
 action_add_invitee.key=A
 #orig#action_add_invitee.name=Add
 action_add_invitee.name=Aggiungi
-
-#orig#action_ask_for_friendship.description=Ask for friendship
-action_ask_for_friendship.description=Chiedi l'amicizia
-#orig#action_ask_for_friendship.key=A
-action_ask_for_friendship.key=A
-#orig#action_ask_for_friendship.name=Ask
-action_ask_for_friendship.name=Chiedi
 
 #orig#action_backup_online_storage.description=Backup this folder to Online Storage
 action_backup_online_storage.description=Copia questa cartella sullo Storage Online
@@ -337,13 +323,6 @@ action_open_files_information.description=Apri informazioni sui file di questa c
 action_open_files_information.key=F
 #orig#action_open_files_information.name=Browse files
 action_open_files_information.name=Sfoglia files
-
-#orig#action_open_invitation_received_wizard.description=Open invitation received wizard
-action_open_invitation_received_wizard.description=Apri wizard degli inviti ricevuti
-#orig#action_open_invitation_received_wizard.key=I
-action_open_invitation_received_wizard.key=I
-#orig#action_open_invitation_received_wizard.name=Invitation
-action_open_invitation_received_wizard.name=Invito
 
 #orig#action_open_members_information.description=Open members information for this folder
 action_open_members_information.description=Apri informazioni sui membri per questa cartella
@@ -1392,15 +1371,6 @@ status_tab.last_synced=Ultima sincronizzata {0}
 status_tab.local=Locale
 #orig#status_tab.never_synced=Folders never synchronized
 status_tab.never_synced=Cartelle mai sincronizzate
-#orig#status_tab.new_friend_requests=New friend request(s)
-status_tab.new_friend_requests=Nuova richiesta(e) amicizia
-#orig#status_tab.new_invitations=New invitation(s)
-status_tab.new_invitations=Nuovo invito(i)
-#orig#status_tab.new_single_file_offers=New single file offer(s)
-status_tab.new_single_file_offers=Nuova offerta(e) singolo file
-#orig#status_tab.new_warnings=Warning(s)
-status_tab.new_warnings=Avviso(i)
-#orig#status_tab.no_computers=No other computers known
 status_tab.no_computers=Nessun altro computer
 #orig#status_tab.no_folders=No folders configured
 status_tab.no_folders=Nessuna cartella configurata
@@ -2278,7 +2248,7 @@ status_bar.status_change.title=Stato di connessione
 
 sync_icon_button_mini.tip=Sincronizza cartelle ora
 
-#orig#synchronization.notice.title=Activated transfer mode {0}
+#orig#synchronization.notices.title=Activated transfer mode {0}
 synchronization.notice.title=Profilo si sincronizzazione {0} attivato
 #orig#synchronization.warning.automatic_deletions_notice=This mode will also synchronize file deletions\!
 synchronization.warning.automatic_deletions_notice=Questa modalit\u00e0 sincronizzer\u00e0 anche le cancellazioni di file\!
@@ -2418,8 +2388,6 @@ uicontroller.local_mass_delete.title=Tutti i file sono stati cancellati
 uicontroller.remote_mass_delete.warning_absolute_message=Il membro {0} ha cancellato {1} o più file dalla cartella {2}.\n\nPer proteggere i files locali, la modalità di trasferimento di questa cartella è stata modificata\nda {3} a {4}.
 #orig#uicontroller.remote_mass_delete.warning_message=Member {0} deleted {1}% of files from folder {2}.\n\nTo protect local files, this folder's transfer mode has been changed\nfrom {3} to {4}.
 uicontroller.remote_mass_delete.warning_message=Membro {0} ha cancellato {1}% di files dalla cartella {2}.\n\nPer proteggere i files locali, la modalit\u00e0 di trasferimento di questa cartella \u00e8 stata modificata\nda {3} a {4}.
-#orig#uicontroller.remote_mass_delete.warning_title=Mass deletion detected
-uicontroller.remote_mass_delete.warning_title=Rilevata cancellazione di massa
 
 uilock.dialog.error.wronglogin=Nome utente o password non validi.
 uilock.dialog.exit=Esci
