--- a/src/etc/Translation_pl.properties
+++ b/src/etc/Translation_pl.properties
@@ -73,10 +73,6 @@ about_dialog.your_system.title=Tw\u00f3j System
 ##action_abort_download.key=A
 ##action_abort_download.name=Abort
 
-##action_activate_warning.description=Display any warnings
-##action_activate_warning.key=W
-##action_activate_warning.name=Warning
-
 ##action_add_directory.description=Add directory
 ##action_add_directory.key=A
 ##action_add_directory.name=Add
@@ -92,10 +88,6 @@ about_dialog.your_system.title=Tw\u00f3j System
 ##action_add_invitee.description=Add invitee
 ##action_add_invitee.key=A
 ##action_add_invitee.name=Add
-
-##action_ask_for_friendship.description=Ask for friendship
-##action_ask_for_friendship.key=A
-##action_ask_for_friendship.name=Ask
 
 ##action_backup_online_storage.description=Backup this folder to Online Storage
 ##action_backup_online_storage.key=B
@@ -216,10 +208,6 @@ about_dialog.your_system.title=Tw\u00f3j System
 ##action_open_files_information.description=Open files information for this folder
 ##action_open_files_information.key=F
 ##action_open_files_information.name=Browse files
-
-##action_open_invitation_received_wizard.description=Open invitation received wizard
-##action_open_invitation_received_wizard.key=I
-##action_open_invitation_received_wizard.name=Invitation
 
 ##action_open_members_information.description=Open members information for this folder
 ##action_open_members_information.key=M
@@ -886,9 +874,6 @@ general.yesterday=wczoraj
 ##status_tab.last_synced=Last synchronized {0}
 ##status_tab.local=Local
 ##status_tab.never_synced=Folders never synchronized
-##status_tab.new_friend_requests=New friend request(s)
-##status_tab.new_invitations=New invitation(s)
-##status_tab.new_single_file_offers=New single file offer(s)
 ##status_tab.new_warnings=Warning(s)
 ##status_tab.no_computers=No other computers known
 ##status_tab.no_folders=No folders configured
@@ -1525,7 +1510,7 @@ send_invitation.placetostore=Wybierz miejsce, w kt\u00f3rym chcesz zachowa\u0107
 
 ##sync_icon_button_mini.tip=Synchronize folder now
 
-#orig#synchronization.notice.title=Activated transfer mode {0}
+#orig#synchronization.notices.title=Activated transfer mode {0}
 synchronization.notice.title=Profil synchronizacji {0} zosta\u0142 aktywowany
 #orig#synchronization.warning.automatic_deletions_notice=This mode will also synchronize file deletions\!
 synchronization.warning.automatic_deletions_notice=Ten tryb tak\u017ce b\u0119dzie synchronizowa\u0142 usuwanie plik\u00f3w\!
