--- a/src/etc/Translation_pt.properties
+++ b/src/etc/Translation_pt.properties
@@ -68,10 +68,6 @@ about_dialog.your_system.title=Seu Sistema
 ##action_abort_download.key=A
 ##action_abort_download.name=Abort
 
-##action_activate_warning.description=Display any warnings
-##action_activate_warning.key=W
-##action_activate_warning.name=Warning
-
 ##action_add_directory.description=Add directory
 ##action_add_directory.key=A
 ##action_add_directory.name=Add
@@ -87,10 +83,6 @@ about_dialog.your_system.title=Seu Sistema
 ##action_add_invitee.description=Add invitee
 ##action_add_invitee.key=A
 ##action_add_invitee.name=Add
-
-##action_ask_for_friendship.description=Ask for friendship
-##action_ask_for_friendship.key=A
-##action_ask_for_friendship.name=Ask
 
 ##action_backup_online_storage.description=Backup this folder to Online Storage
 ##action_backup_online_storage.key=B
@@ -211,10 +203,6 @@ about_dialog.your_system.title=Seu Sistema
 ##action_open_files_information.description=Open files information for this folder
 ##action_open_files_information.key=F
 ##action_open_files_information.name=Browse files
-
-##action_open_invitation_received_wizard.description=Open invitation received wizard
-##action_open_invitation_received_wizard.key=I
-##action_open_invitation_received_wizard.name=Invitation
 
 ##action_open_members_information.description=Open members information for this folder
 ##action_open_members_information.key=M
@@ -900,9 +888,6 @@ general.yesterday=ontem
 ##status_tab.last_synced=Last synchronized {0}
 ##status_tab.local=Local
 ##status_tab.never_synced=Folders never synchronized
-##status_tab.new_friend_requests=New friend request(s)
-##status_tab.new_invitations=New invitation(s)
-##status_tab.new_single_file_offers=New single file offer(s)
 ##status_tab.new_warnings=Warning(s)
 ##status_tab.no_computers=No other computers known
 ##status_tab.no_folders=No folders configured
@@ -1548,7 +1533,7 @@ send_invitation.placetostore=Escolha um lugar para armazenar o convite
 
 ##sync_icon_button_mini.tip=Synchronize folder now
 
-#orig#synchronization.notice.title=Activated transfer mode {0}
+#orig#synchronization.notices.title=Activated transfer mode {0}
 synchronization.notice.title=Perfil de sincroniza\u00e7\u00e3o em uso {0}
 #orig#synchronization.warning.automatic_deletions_notice=This mode will also synchronize file deletions\!
 synchronization.warning.automatic_deletions_notice=Este modo tamb\u00e9m sincronizar\u00e1 exclus\u00e3o de arquivos\!
