--- a/src/etc/Translation_tr.properties
+++ b/src/etc/Translation_tr.properties
@@ -60,10 +60,6 @@
 ##action_abort_download.key=A
 ##action_abort_download.name=Abort
 
-##action_activate_warning.description=Display any warnings
-##action_activate_warning.key=W
-##action_activate_warning.name=Warning
-
 ##action_add_directory.description=Add directory
 ##action_add_directory.key=A
 ##action_add_directory.name=Add
@@ -79,10 +75,6 @@
 ##action_add_invitee.description=Add invitee
 ##action_add_invitee.key=A
 ##action_add_invitee.name=Add
-
-##action_ask_for_friendship.description=Request connection
-##action_ask_for_friendship.key=A
-##action_ask_for_friendship.name=Ask
 
 ##action_backup_online_storage.description=Backup this folder to Online Storage
 ##action_backup_online_storage.key=B
@@ -211,10 +203,6 @@
 ##action_open_files_information.description=Open file information for this folder
 ##action_open_files_information.key=F
 ##action_open_files_information.name=Browse files
-
-##action_open_invitation_received_wizard.description=Open the invitation received wizard
-##action_open_invitation_received_wizard.key=I
-##action_open_invitation_received_wizard.name=Invitation
 
 ##action_open_members_information.description=Open information on members for this folder
 ##action_open_members_information.key=M
@@ -1277,9 +1265,6 @@
 ##status_tab.last_synced=Last sync {0}
 ##status_tab.local=Local
 ##status_tab.never_synced=Folders never in sync
-##status_tab.new_friend_requests=New connection request(s)
-##status_tab.new_invitations=New invitation(s)
-##status_tab.new_single_file_offers=New single file offer(s)
 ##status_tab.new_warnings=Warning(s)
 ##status_tab.no_computers=No other computers known
 ##status_tab.no_folders=No folders configured. Press "New Folder" to start.
@@ -1313,7 +1298,7 @@
 
 ##sync_icon_button_mini.tip=Sync folder now
 
-##synchronization.notice.title=Activated transfer mode {0}
+##synchronization.notices.title=Activated transfer mode {0}
 ##synchronization.warning.automatic_deletions_notice=This mode will also sync file deletions\!
 
 ##system_monitor.cpu_usage=CPU Usage\:
