--- a/src/etc/Translation_ar.properties
+++ b/src/etc/Translation_ar.properties
@@ -71,10 +71,6 @@ about_dialog.your_system.title=\u0646\u0638\u0627\u0645\u0643
 ##action_abort_download.key=A
 ##action_abort_download.name=Abort
 
-##action_activate_warning.description=Display any warnings
-##action_activate_warning.key=W
-##action_activate_warning.name=Warning
-
 ##action_add_directory.description=Add directory
 ##action_add_directory.key=A
 ##action_add_directory.name=Add
@@ -90,10 +86,6 @@ about_dialog.your_system.title=\u0646\u0638\u0627\u0645\u0643
 ##action_add_invitee.description=Add invitee
 ##action_add_invitee.key=A
 ##action_add_invitee.name=Add
-
-##action_ask_for_friendship.description=Ask for friendship
-##action_ask_for_friendship.key=A
-##action_ask_for_friendship.name=Ask
 
 ##action_backup_online_storage.description=Backup this folder to Online Storage
 ##action_backup_online_storage.key=B
@@ -214,10 +206,6 @@ about_dialog.your_system.title=\u0646\u0638\u0627\u0645\u0643
 ##action_open_files_information.description=Open files information for this folder
 ##action_open_files_information.key=F
 ##action_open_files_information.name=Browse files
-
-##action_open_invitation_received_wizard.description=Open invitation received wizard
-##action_open_invitation_received_wizard.key=I
-##action_open_invitation_received_wizard.name=Invitation
 
 ##action_open_members_information.description=Open members information for this folder
 ##action_open_members_information.key=M
@@ -877,9 +865,6 @@ general.yesterday=\u0627\u0644\u0628\u0627\u0631\u062d\u0629
 ##status_tab.last_synced=Last synchronized {0}
 ##status_tab.local=Local
 ##status_tab.never_synced=Folders never synchronized
-##status_tab.new_friend_requests=New friend request(s)
-##status_tab.new_invitations=New invitation(s)
-##status_tab.new_single_file_offers=New single file offer(s)
 ##status_tab.new_warnings=Warning(s)
 ##status_tab.no_computers=No other computers known
 ##status_tab.no_folders=No folders configured
@@ -1500,7 +1485,7 @@ send_invitation.placetostore=\u0623\u062e\u062a\u0631 \u0645\u0643\u0627\u0646\u
 
 ##sync_icon_button_mini.tip=Synchronize folder now
 
-#orig#synchronization.notice.title=Activated transfer mode {0}
+#orig#synchronization.notices.title=Activated transfer mode {0}
 synchronization.notice.title=\u062a\u0641\u0639\u064a\u0644 \u0645\u0644\u0641 \u0627\u0644\u0645\u0632\u0627\u0645\u0646\u0629 {0}
 #orig#synchronization.warning.automatic_deletions_notice=This mode will also synchronize file deletions\!
 synchronization.warning.automatic_deletions_notice=\u0647\u0630 \u0627\u0644\u0648\u0636\u0639 \u0633\u0648\u0641 \u064a\u0632\u0627\u0645\u0646 \u0623\u064a\u0636\u0627 \u0627\u0644\u0645\u0644\u0641\u0627\u062a \u0627\u0644\u0645\u062d\u0630\u0648\u0641\u0629\!
