--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -86,13 +86,6 @@ action_abort_download.key=A
 #orig#action_abort_download.name=Abort
 action_abort_download.name=\u53d6\u6d88
 
-#orig#action_activate_warning.description=Display any warnings
-action_activate_warning.description=\u663e\u793a\u4efb\u4f55\u8b66\u544a
-#orig#action_activate_warning.key=W
-action_activate_warning.key=W
-#orig#action_activate_warning.name=Warning
-action_activate_warning.name=\u8b66\u544a
-
 #orig#action_add_directory.description=Add directory
 action_add_directory.description=\u6dfb\u52a0\u6587\u4ef6\u5939
 #orig#action_add_directory.key=A
@@ -120,13 +113,6 @@ action_add_invitee.description=\u6dfb\u52a0\u9080\u8bf7
 action_add_invitee.key=A
 #orig#action_add_invitee.name=Add
 action_add_invitee.name=\u6dfb\u52a0
-
-#orig#action_ask_for_friendship.description=Ask for friendship
-action_ask_for_friendship.description=\u8bf7\u6c42\u597d\u53cb\u5173\u7cfb
-#orig#action_ask_for_friendship.key=A
-action_ask_for_friendship.key=A
-#orig#action_ask_for_friendship.name=Ask
-action_ask_for_friendship.name=\u8bf7\u6c42
 
 #orig#action_backup_online_storage.description=Backup this folder to Online Storage
 action_backup_online_storage.description=\u5c06\u6587\u4ef6\u5939\u5907\u4efd\u5230\u5728\u7ebf\u5b58\u50a8
@@ -337,13 +323,6 @@ action_open_files_information.description=\u67e5\u770b\u6587\u4ef6\u5939\u7684\u
 action_open_files_information.key=F
 #orig#action_open_files_information.name=Browse files
 action_open_files_information.name=\u6d4f\u89c8\u6587\u4ef6
-
-#orig#action_open_invitation_received_wizard.description=Open invitation received wizard
-action_open_invitation_received_wizard.description=\u6253\u5f00\u9080\u8bf7\u63a5\u53d7\u5411\u5bfc
-#orig#action_open_invitation_received_wizard.key=I
-action_open_invitation_received_wizard.key=I
-#orig#action_open_invitation_received_wizard.name=Invitation
-action_open_invitation_received_wizard.name=\u9080\u8bf7
 
 #orig#action_open_members_information.description=Open members information for this folder
 action_open_members_information.description=\u67e5\u770b\u6587\u4ef6\u5939\u7684\u6210\u5458\u4fe1\u606f
@@ -1407,14 +1386,6 @@ status_tab.last_synced=\u4e0a\u4e00\u6b21\u540c\u6b65 {0}
 status_tab.local=\u672c\u5730
 #orig#status_tab.never_synced=Folders never synchronized
 status_tab.never_synced=\u4ece\u6765\u6ca1\u6709\u540c\u6b65\u7684\u6587\u4ef6\u5939
-#orig#status_tab.new_friend_requests=New friend request(s)
-status_tab.new_friend_requests=\u65b0\u7684\u597d\u53cb\u8bf7\u6c42
-#orig#status_tab.new_invitations=New invitation(s)
-status_tab.new_invitations=\u65b0\u7684\u9080\u8bf7
-#orig#status_tab.new_single_file_offers=New single file offer(s)
-status_tab.new_single_file_offers=\u63d0\u4f9b\u7684\u65b0\u5355\u4e00\u6587\u4ef6New single file offer(s)
-#orig#status_tab.new_warnings=Warning(s)
-status_tab.new_warnings=\u8b66\u544a
 #orig#status_tab.no_computers=No other computers known
 status_tab.no_computers=\u6ca1\u6709\u53d1\u73b0\u5176\u5b83\u7684\u8ba1\u7b97\u673a
 #orig#status_tab.no_folders=No folders configured
@@ -2308,7 +2279,7 @@ status_bar.status_change.title=\u8fde\u63a5\u72b6\u6001
 #orig#sync_icon_button_mini.tip=Synchronize folder now
 sync_icon_button_mini.tip=\u73b0\u5728\u540c\u6b65\u6587\u4ef6\u5939
 
-#orig#synchronization.notice.title=Activated transfer mode {0}
+#orig#synchronization.notices.title=Activated transfer mode {0}
 synchronization.notice.title=\u6fc0\u6d3b\u540c\u6b65\u9009\u9879 {0}
 #orig#synchronization.warning.automatic_deletions_notice=This mode will also synchronize file deletions\!
 synchronization.warning.automatic_deletions_notice=\u6b64\u6a21\u5f0f\u4e5f\u4f1a\u540c\u6b65\u5220\u9664\u6587\u4ef6\uff01
@@ -2449,8 +2420,6 @@ uicontroller.local_mass_delete.title=\u5220\u9664\u6240\u6709\u6587\u4ef6
 uicontroller.remote_mass_delete.warning_absolute_message=\u6210\u5458 {0} \u5220\u9664\u4e86\u6587\u4ef6\u5939 {2} \u4e2d{1}\u4e2a\u4ee5\u4e0a \u7684\u6587\u4ef6\u3002\n\n\u4e3a\u4e86\u4fdd\u62a4\u672c\u5730\u6587\u4ef6\uff0c\u6587\u4ef6\u5939\u7684\u4f20\u8f93\u6a21\u5f0f\n\u4ece {3} \u53d8\u66f4\u4e3a {4}\u3002\u3002
 #orig#uicontroller.remote_mass_delete.warning_message=Member {0} deleted {1}% of files from folder {2}.\n\nTo protect local files, this folder's transfer mode has been changed\nfrom {3} to {4}.
 uicontroller.remote_mass_delete.warning_message=\u6210\u5458 {0} \u5220\u9664\u4e86\u6587\u4ef6\u5939 {2} \u4e2d {1}% \u7684\u6587\u4ef6\u3002\n\n\u4e3a\u4e86\u4fdd\u62a4\u672c\u5730\u6587\u4ef6\uff0c\u6587\u4ef6\u5939\u7684\u4f20\u8f93\u6a21\u5f0f\n\u4ece {3} \u53d8\u66f4\u4e3a {4}\u3002
-#orig#uicontroller.remote_mass_delete.warning_title=Mass deletion detected
-uicontroller.remote_mass_delete.warning_title=\u68c0\u6d4b\u5230\u5927\u91cf\u5220\u9664
 
 uilock.dialog.error.wronglogin=\u65e0\u6548\u7528\u6237\u540d\u6216\u5bc6\u7801
 uilock.dialog.exit=\u9000\u51fa
