--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -785,7 +785,7 @@ dialog.restore_archive.title=Archivierte Dateiversion wiederherstellen
 #orig#dialog.synchronization.choose=Please choose your sync action
 dialog.synchronization.choose=Wie m\u00f6chten Sie jetzt synchronisieren?
 #orig#dialog.synchronization.duplicate.delete=Deleting this transfer mode will affect all these folders.
-dialog.synchronization.duplicate.delete=L\u00f6schen diese Transfer Modus betrifft folgende PowerFolder.
+dialog.synchronization.duplicate.delete=L\u00f6schen diese Transfer Modus betrifft folgende Folder.
 #orig#dialog.synchronization.duplicate.edit=Editing this transfer mode will affect all these folders.
 dialog.synchronization.duplicate.edit=\u00c4nderungen an diesem Transfer Modus betrifft folgende folder.
 #orig#dialog.synchronization.duplicate.title=Duplicate use
@@ -1703,7 +1703,7 @@ preferences.dialog.online_storage.tip=Online Speicherung aktivieren
 #orig#preferences.dialog.open_port=Automatically open Windows Firewall
 preferences.dialog.open_port=Automatisch die Windows Firewall \u00f6ffnen
 #orig#preferences.dialog.open_port.tooltip=Opens the {APPNAME} port on the Windows Firewall
-preferences.dialog.open_port.tooltip=\u00d6ffnet den PowerFolder Port automatisch in der Windows Firewall
+preferences.dialog.open_port.tooltip=\u00d6ffnet den benötigten Port automatisch in der Windows Firewall
 #orig#preferences.dialog.plugin.class_name=Java classname
 preferences.dialog.plugin.class_name=Klasse
 #orig#preferences.dialog.plugin.description=Description
