--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -606,7 +606,7 @@ config.loader.dialog.loaded=\u52a0\u8f7d {0} \u8bbe\u7f6e
 #orig#config.loader.dialog.skip=Skip
 config.loader.dialog.skip=\u8df3\u8fc7
 #orig#config.loader.dialog.title={APPNAME}\: Select storage provider
-config.loader.dialog.title=PowerFolder\: \u9009\u62e9\u5728\u7ebf\u5b58\u50a8\u4f9b\u5e94\u5546
+config.loader.dialog.title={APPNAME}\: \u9009\u62e9\u5728\u7ebf\u5b58\u50a8\u4f9b\u5e94\u5546
 
 #orig#connect.dialog.text=Please enter the hostname or IP of the computer you want to connect.\n\n{APPNAME} automatically connects to the network after a short time;\nuse this option if you want to manually connect to a computer.\n
 connect.dialog.text=\u8bf7\u8f93\u5165\u4f60\u60f3\u8fde\u63a5\u7684\u8ba1\u7b97\u673a\u7684\u4e3b\u673a\u540d\u6216IP\u3002\n\nPowerFolder\u7a0d\u5019\u5c06\u81ea\u52a8\u8fde\u63a5\u5230\u7f51\u7edc\uff1b\n\u5982\u679c\u4f60\u60f3\u624b\u52a8\u8fde\u63a5\u4e00\u53f0\u8ba1\u7b97\u673a\uff0c\u8bf7\u4f7f\u7528\u8be5\u9009\u9879\u3002\n
@@ -640,7 +640,7 @@ dialog.already_running.start_button=\u65e0\u8bba\u5982\u4f55\u7ee7\u7eed
 #orig#dialog.already_running.title=Already running
 dialog.already_running.title=\u5df2\u7ecf\u8fd0\u884c
 #orig#dialog.already_running.warning={APPNAME} already running\n\nHint\: If you restarted {APPNAME}, \nkill all javaw/java processes and try again
-dialog.already_running.warning=PowerFolder\u5df2\u7ecf\u8fd0\u884c\r\n\r\n\u63d0\u793a\uff1a\u5982\u679c\u4f60\u60f3\u91cd\u542fPowerFolder\uff0c\r\n\u5173\u95ed\u6240\u6709javaw/java\u8fdb\u7a0b\u5e76\u91cd\u8bd5
+dialog.already_running.warning={APPNAME}\u5df2\u7ecf\u8fd0\u884c\r\n\r\n\u63d0\u793a\uff1a\u5982\u679c\u4f60\u60f3\u91cd\u542fPowerFolder\uff0c\r\n\u5173\u95ed\u6240\u6709javaw/java\u8fdb\u7a0b\u5e76\u91cd\u8bd5
 #orig#dialog.ask_for_friendship.button.add=Add to friends
 dialog.ask_for_friendship.button.add=\u6dfb\u52a0\u4e3a\u597d\u53cb
 #orig#dialog.ask_for_friendship.explain={APPNAME} automatically connects\nto computers on your friendslist.
@@ -806,7 +806,7 @@ dialog.update_check.downloadAndUpdate=\u7acb\u5373\u4e0b\u8f7d\u5e76\u66f4\u65b0
 #orig#dialog.update_check.downloadAndUpdateSilent=Download and silently update now
 dialog.update_check.downloadAndUpdateSilent=\u7acb\u5373\u4e0b\u8f7d\u5e76\u540e\u53f0\u66f4\u65b0
 #orig#dialog.update_check.failed.text=Update failed. Please check your Internet connection.
-dialog.update_check.failed.text=\u66f4\u65b0\u5931\u8d25\u3002\u8bf7\u68c0\u67e5\u4f60\u7684\u4e92\u8054\u7f51\u8fde\u63a5\u3002\n \nPowerFolder\u4e13\u4e1a\u7248\: \u8bf7\u540c\u65f6\u68c0\u67e5\u4f60\u7684\u5347\u7ea7\u670d\u52a1\u8d26\u53f7\uff0c\u5728\n\u8bbe\u7f6e/\u4e13\u4e1a\u7248\u8bbe\u7f6e/PowerFolder\u4e13\u4e1a\u7248\u52a0\u8f7d\u3002
+dialog.update_check.failed.text=\u66f4\u65b0\u5931\u8d25\u3002\u8bf7\u68c0\u67e5\u4f60\u7684\u4e92\u8054\u7f51\u8fde\u63a5\u3002\n \nPowerFolder\u4e13\u4e1a\u7248\: \u8bf7\u540c\u65f6\u68c0\u67e5\u4f60\u7684\u5347\u7ea7\u670d\u52a1\u8d26\u53f7\uff0c\u5728\n\u8bbe\u7f6e/\u4e13\u4e1a\u7248\u8bbe\u7f6e/{APPNAME}\u4e13\u4e1a\u7248\u52a0\u8f7d\u3002
 #orig#dialog.update_check.failed.title=Update failed
 dialog.update_check.failed.title=\u66f4\u65b0\u5931\u8d25
 #orig#dialog.update_check.gotoHomepage=Go to {APPNAME} homepage
@@ -1065,9 +1065,9 @@ folder_create.dialog.select_directory.text=\u9009\u62e9\u76ee\u5f55
 folder_create.os_error.text=\u4e0d\u80fd\u8bbe\u7f6e\u7528\u4e8e\u5907\u4efd{0}\u7684\u5728\u7ebf\u5b58\u50a8
 
 #orig#folder_exception.dialog.text=Unable to join Folder '{0}'.\nReason\: {1}
-folder_exception.dialog.text=\u4e0d\u80fd\u52a0\u5165 PowerFolder '{0}'\u3002\n\u539f\u56e0\: {1}
+folder_exception.dialog.text=\u4e0d\u80fd\u52a0\u5165 {APPNAME} '{0}'\u3002\n\u539f\u56e0\: {1}
 #orig#folder_exception.dialog.title=Problem with Folder '{0}'
-folder_exception.dialog.title=PowerFolder '{0}' \u51fa\u73b0\u95ee\u9898
+folder_exception.dialog.title={APPNAME} '{0}' \u51fa\u73b0\u95ee\u9898
 
 #orig#folder_information_card.files.tips=Shows file details for this folder
 folder_information_card.files.tips=\u663e\u793a\u6587\u4ef6\u5939\u7684\u6587\u4ef6\u8be6\u60c5
@@ -1164,7 +1164,7 @@ folder_remove.dialog.remove_from_local=\u505c\u6b62\u672c\u5730\u540c\u6b65
 #orig#folder_remove.dialog.remove_from_os=Remove from online folders
 folder_remove.dialog.remove_from_os=\u4ece\u5728\u7ebf\u5b58\u50a8\u4e2d\u79fb\u9664
 #orig#folder_remove.dialog.sync_warning=The Folder is currently synchronizing\!
-folder_remove.dialog.sync_warning=PowerFolder\u6b63\u5728\u540c\u6b65\uff01
+folder_remove.dialog.sync_warning={APPNAME}\u6b63\u5728\u540c\u6b65\uff01
 #orig#folder_remove.dialog.text=Remove Folder {0}?
 folder_remove.dialog.text=\u79fb\u9664PowerFolder {0}?
 #orig#folder_remove.dialog.title=Remove Folder {0}?
@@ -1196,11 +1196,11 @@ free_limit_dialog.buy_pro=\u8d2d\u4e70PowerFolder\u4e13\u4e1a\u7248
 #orig#free_limit_dialog.buy_recommendation=It is required that you upgrade or reduce your usage.
 free_limit_dialog.buy_recommendation=\u4f60\u9700\u8981\u5347\u7ea7\u5230\u4e13\u4e1a\u7248\u6216\u51cf\u5c11\u4f7f\u7528\u7387\u3002
 #orig#free_limit_dialog.buy_recommendation2={APPNAME} is currently disabled until you take action.
-free_limit_dialog.buy_recommendation2=PowerFolder\u76ee\u524d\u88ab\u7981\u7528\uff0c\u8bf7\u4f60\u8d76\u5feb\u884c\u52a8\u5427\u3002
+free_limit_dialog.buy_recommendation2={APPNAME}\u76ee\u524d\u88ab\u7981\u7528\uff0c\u8bf7\u4f60\u8d76\u5feb\u884c\u52a8\u5427\u3002
 #orig#free_limit_dialog.buy_recommendation3=Support us by upgrading {APPNAME}\!
 free_limit_dialog.buy_recommendation3=\u901a\u8fc7\u8d2d\u4e70PowerFolder\u4e13\u4e1a\u7248\u652f\u6301\u6211\u4eec\!
 #orig#free_limit_dialog.heavy_usage_detected={APPNAME} has detected that you are extensively using it.
-free_limit_dialog.heavy_usage_detected=PowerFolder\u68c0\u6d4b\u4f60\u6b63\u5728\u8fc7\u5ea6\u4f7f\u7528\u3002
+free_limit_dialog.heavy_usage_detected={APPNAME}\u68c0\u6d4b\u4f60\u6b63\u5728\u8fc7\u5ea6\u4f7f\u7528\u3002
 #orig#free_limit_dialog.reason=Only {1} GBs data and {0} folders allowed.
 free_limit_dialog.reason=\u539f\u56e0\: \u914d\u7f6e\u4e86\u8d85\u8fc7 {0} \u4e2a\u6587\u4ef6\u5939\u6216\u8d85\u8fc7 {1} GB\u6570\u636e\u3002
 #orig#free_limit_dialog.reduce=Reduce usage
@@ -1247,7 +1247,7 @@ friendship.notification.title=\u6536\u5230\u597d\u53cb\u8bf7\u6c42
 #orig#general.accept=Accept
 general.accept=\u63a5\u53d7
 #orig#general.application.name={APPNAME}
-general.application.name=PowerFolder
+general.application.name={APPNAME}
 #orig#general.apply=Apply
 general.apply=\u5e94\u7528
 #orig#general.archive_mode=File archive (local)
@@ -1399,7 +1399,7 @@ status_tab.online_storage.account.tips=\u70b9\u51fb\u4ee5\u66f4\u6539\u8d26\u623
 #orig#status_tab.online_storage.account_connecting={0} connecting...
 status_tab.online_storage.account_connecting={0} \u6b63\u5728\u8fde\u63a5...
 #orig#status_tab.online_storage.account_connecting.tips={APPNAME} is connecting to this account
-status_tab.online_storage.account_connecting.tips=PowerFolder\u6b63\u5728\u8fde\u63a5\u5230\u8fd9\u4e2a\u8d26\u6237
+status_tab.online_storage.account_connecting.tips={APPNAME}\u6b63\u5728\u8fde\u63a5\u5230\u8fd9\u4e2a\u8d26\u6237
 #orig#status_tab.online_storage.account_disabled={0} disabled
 status_tab.online_storage.account_disabled={0} \u7981\u7528
 #orig#status_tab.online_storage.account_disabled.tips=This account has been disabled
@@ -1407,7 +1407,7 @@ status_tab.online_storage.account_disabled.tips=\u8d26\u6237\u5df2\u7ecf\u7981\u
 #orig#status_tab.online_storage.account_not_logged_in={0} logging in...
 status_tab.online_storage.account_not_logged_in={0} \u6b63\u5728\u767b\u5f55...
 #orig#status_tab.online_storage.account_not_logged_in.tips={APPNAME} is logging in to this account
-status_tab.online_storage.account_not_logged_in.tips=PowerFolder\u6b63\u5728\u767b\u5f55\u5230\u8fd9\u4e2a\u8d26\u6237
+status_tab.online_storage.account_not_logged_in.tips={APPNAME}\u6b63\u5728\u767b\u5f55\u5230\u8fd9\u4e2a\u8d26\u6237
 #orig#status_tab.online_storage.no_password=Log in to Online Storage
 status_tab.online_storage.no_password=\u767b\u5f55\u5230\u5728\u7ebf\u5b58\u50a8
 #orig#status_tab.online_storage.no_password.tips=Click here to enter account password
@@ -1451,12 +1451,12 @@ invitation.utils.unable.write.text=\u5199\u5165\u9080\u8bf7\u65f6\u51fa\u9519\uf
 invitation.utils.unable.write.title=\u4e0d\u80fd\u5199\u5165\u9080\u8bf7
 
 #orig#invitation_files.description={APPNAME} invitations
-invitation_files.description=PowerFolder \u9080\u8bf7
+invitation_files.description={APPNAME} \u9080\u8bf7
 
 #orig#limited_connection.dont_autodetect=No longer detect limited connectivity
 limited_connection.dont_autodetect=\u4e0d\u518d\u68c0\u6d4b\u53d7\u9650\u8fde\u63a5
 #orig#limited_connection.text={APPNAME} has detected limited connectivity to the network.\nThis may caused by a firewall, router or windows connection share.\nHow to improve your connectivity is answered in our documentation\:\n{0}
-limited_connection.text=PowerFolder\u68c0\u6d4b\u5230\u7f51\u7edc\u7684\u8fde\u63a5\u53d7\u9650\u3002\n\u53ef\u80fd\u662f\u7531\u9632\u706b\u5899\u3001\u8def\u7531\u5668\u6216Windows\u8fde\u63a5\u5171\u4eab\u6240\u5f15\u8d77\u3002\n\u6211\u4eec\u7684\u6587\u6863\u4e2d\u6709\u4ecb\u7ecd\u6539\u5584\u7f51\u7edc\u8fde\u63a5\u7684\u65b9\u6cd5\:\n{0}
+limited_connection.text={APPNAME}\u68c0\u6d4b\u5230\u7f51\u7edc\u7684\u8fde\u63a5\u53d7\u9650\u3002\n\u53ef\u80fd\u662f\u7531\u9632\u706b\u5899\u3001\u8def\u7531\u5668\u6216Windows\u8fde\u63a5\u5171\u4eab\u6240\u5f15\u8d77\u3002\n\u6211\u4eec\u7684\u6587\u6863\u4e2d\u6709\u4ecb\u7ecd\u6539\u5584\u7f51\u7edc\u8fde\u63a5\u7684\u65b9\u6cd5\:\n{0}
 #orig#limited_connection.title=Limited connectivity
 limited_connection.title=\u53d7\u9650\u7684\u8fde\u63a5
 
@@ -1492,7 +1492,7 @@ line_speed.unlimited=\u4e0d\u9650\u901f
 line_speed.upload_speed=\u4e0a\u4f20
 
 #orig#low_memory.configure_failure={APPNAME} was unable to configure additional memory.\nPlease contact {APPNAME} Support for advice.
-low_memory.configure_failure=PowerFolder\u4e0d\u80fd\u914d\u7f6e\u989d\u5916\u7684\u5185\u5b58\u3002\n\u8bf7\u8054\u7cfbPowerFolder\u652f\u6301\u56e2\u961f\u4ee5\u83b7\u5f97\u5efa\u8bae\u3002
+low_memory.configure_failure={APPNAME}\u4e0d\u80fd\u914d\u7f6e\u989d\u5916\u7684\u5185\u5b58\u3002\n\u8bf7\u8054\u7cfbPowerFolder\u652f\u6301\u56e2\u961f\u4ee5\u83b7\u5f97\u5efa\u8bae\u3002
 #orig#low_memory.configure_success=Additional memory has been configured.\n{APPNAME} must be restarted manually for this to take effect.
 low_memory.configure_success=\u989d\u5916\u7684\u5185\u5b58\u5df2\u7ecf\u88ab\u914d\u7f6e\u3002\nPowerFolder\u5fc5\u987b\u624b\u52a8\u91cd\u542f\u624d\u80fd\u751f\u6548\u3002
 #orig#low_memory.do_nothing=Do Nothing
@@ -1504,7 +1504,7 @@ low_memory.error.title=\u5185\u5b58\u6ea2\u51fa
 #orig#low_memory.increase=Increase Memory
 low_memory.increase=\u589e\u52a0\u5185\u5b58
 #orig#low_memory.text={APPNAME} is running out of available memory.\n\n{APPNAME} can attempt to increase the available memory.\n\nMore information\:\n{0}
-low_memory.text=PowerFolder\u5185\u5b58\u4e0d\u8db3\u3002\n\nPowerFolder\u4f1a\u5c1d\u8bd5\u589e\u52a0\u53ef\u7528\u5185\u5b58\u3002
+low_memory.text={APPNAME}\u5185\u5b58\u4e0d\u8db3\u3002\n\nPowerFolder\u4f1a\u5c1d\u8bd5\u589e\u52a0\u53ef\u7528\u5185\u5b58\u3002
 #orig#low_memory.title=Low memory
 low_memory.title=\u5185\u5b58\u4e0d\u8db3
 
@@ -1574,7 +1574,7 @@ network_statistics_panel.public_folders_size=\u6709\u6548\u6587\u4ef6\u603b\u592
 network_statistics_panel.reconnection_queue_size=\u5728\u91cd\u65b0\u8fde\u63a5\u961f\u5217\u4e2d\u7684\u8ba1\u7b97\u673a
 
 #orig#notification_form.title=<html><b>{APPNAME}</b><br>{0}</html>
-notification_form.title=<html><b>PowerFolder</b><br>{0}</html>
+notification_form.title=<html><b>{APPNAME}</b><br>{0}</html>
 
 #orig#notification_handler.display.text=Display
 notification_handler.display.text=\u663e\u793a
@@ -1814,7 +1814,7 @@ preferences.dialog.plugin.title=\u9ad8\u7ea7\u8bbe\u7f6e
 #orig#preferences.dialog.randomPort=Automatically find a port
 preferences.dialog.randomPort=\u81ea\u52a8\u67e5\u627e\u7aef\u53e3
 #orig#preferences.dialog.randomPort.tooltip={APPNAME} will try to bind random port.
-preferences.dialog.randomPort.tooltip=PowerFolder\u5c06\u5c1d\u8bd5\u7ed1\u5b9a\u7aef\u53e3\u3002
+preferences.dialog.randomPort.tooltip={APPNAME}\u5c06\u5c1d\u8bd5\u7ed1\u5b9a\u7aef\u53e3\u3002
 #orig#preferences.dialog.restart.restart=Restart Now
 preferences.dialog.restart.restart=\u7acb\u5373\u91cd\u542f
 #orig#preferences.dialog.restart.text=Some changes require {APPNAME} to restart.
@@ -1935,7 +1935,7 @@ pro.status_tab.remaining=\u5269\u4f59 {0} \u5929
 #orig#pro.status_tab.remaining.tips=Your license will expire in {0} days
 pro.status_tab.remaining.tips=\u4f60\u7684\u6388\u6743\u5c06\u5728 {0} \u540e\u8fc7\u671f
 #orig#pro.status_tab.renew_license=Renew {APPNAME}
-pro.status_tab.renew_license=PowerFolder\u7eed\u8d39
+pro.status_tab.renew_license={APPNAME}\u7eed\u8d39
 #orig#pro.status_tab.upgrade_powerfolder=Buy {APPNAME} now
 pro.status_tab.upgrade_powerfolder=\u5347\u7ea7PowerFolder
 #orig#pro.http.description=HTTP connections tunneled via HTTP
@@ -2017,11 +2017,11 @@ pro.system_service.name=\u7cfb\u7edf\u670d\u52a1
 #orig#pro.systemservice.options.info1=Use these options install/uninstall
 pro.systemservice.options.info1=\u4f7f\u7528\u8fd9\u4e9b\u9009\u9879\u5b89\u88c5/\u5378\u8f7d
 #orig#pro.systemservice.options.info2={APPNAME} as system service.
-pro.systemservice.options.info2=PowerFolder\u4f5c\u4e3a\u7cfb\u7edf\u670d\u52a1\u3002
+pro.systemservice.options.info2={APPNAME}\u4f5c\u4e3a\u7cfb\u7edf\u670d\u52a1\u3002
 #orig#pro.systemservice.options.install=Install
 pro.systemservice.options.install=\u5b89\u88c5
 #orig#pro.systemservice.options.title=System Service
-pro.systemservice.options.title=PowerFolder\u7cfb\u7edf\u670d\u52a1
+pro.systemservice.options.title={APPNAME}\u7cfb\u7edf\u670d\u52a1
 #orig#pro.systemservice.options.uninstall=Uninstall
 pro.systemservice.options.uninstall=\u5378\u8f7d
 #orig#pro.udt_connections.description=Enable to prefer UDT over TCP connections
@@ -2083,7 +2083,7 @@ pro.wizard.activation.password_length=\u6709\u6548\u7684\u7535\u5b50\u90ae\u4ef6
 #orig#pro.wizard.activation.please_purchase=Please upgrade {APPNAME} to continue.
 pro.wizard.activation.please_purchase=\u8bf7\u5347\u7ea7PowerFolder\u5e76\u7ee7\u7eed\u3002
 #orig#pro.wizard.activation.pro_activation={APPNAME} Activation
-pro.wizard.activation.pro_activation=PowerFolder Pro\u6fc0\u6d3b
+pro.wizard.activation.pro_activation={APPNAME} Pro\u6fc0\u6d3b
 #orig#pro.wizard.activation.recover_password=Recover password
 pro.wizard.activation.recover_password=\u6062\u590d\u5bc6\u7801
 #orig#pro.wizard.activation.register_now=Sign up for an account
@@ -2258,7 +2258,7 @@ status.download=\u4e0b\u8f7d\: {0} KB//\u79d2
 #orig#status.port.text=Port\: {0}
 status.port.text=\u7aef\u53e3\: {0}
 #orig#status.port.tip=Connection port number
-status.port.tip=PowerFolder\u8fde\u63a5\u7aef\u53e3\u53f7
+status.port.tip={APPNAME}\u8fde\u63a5\u7aef\u53e3\u53f7
 #orig#status.upload=Up\: {0} KB/s
 status.upload=\u4e0a\u4f20\: {0} KB/\u79d2
 
@@ -2270,9 +2270,9 @@ status_bar.poor_quality_warning.title=\u8fde\u63a5\u8d28\u91cf\u5dee
 #orig#status_bar.sleep.tips=Disable folder change scanning
 status_bar.sleep.tips=\u7981\u7528\u6587\u4ef6\u5939\u66f4\u6539\u626b\u63cf
 #orig#status_bar.status_change.connected={APPNAME} is connected
-status_bar.status_change.connected=PowerFolder\u5df2\u7ecf\u8fde\u63a5
+status_bar.status_change.connected={APPNAME}\u5df2\u7ecf\u8fde\u63a5
 #orig#status_bar.status_change.disabled={APPNAME} is disabled
-status_bar.status_change.disabled=PowerFolder\u5df2\u7ecf\u7981\u7528
+status_bar.status_change.disabled={APPNAME}\u5df2\u7ecf\u7981\u7528
 #orig#status_bar.status_change.title=Connection Status
 status_bar.status_change.title=\u8fde\u63a5\u72b6\u6001
 
@@ -2304,7 +2304,7 @@ systray.notifications.chat=\u663e\u793a\u804a\u5929\u63d0\u793a
 #orig#systray.notifications.system=Show System Notifications
 systray.notifications.system=\u663e\u793a\u7cfb\u7edf\u63d0\u793a
 #orig#systray.powerfolder={APPNAME} v{0}
-systray.powerfolder=PowerFolder v{0}
+systray.powerfolder={APPNAME} v{0}
 #orig#systray.show=Show
 systray.show=\u663e\u793a
 #orig#systray.sync_all=Sync Folders
