add chinese translation strings

--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -1413,13 +1413,13 @@ status_tab.online_storage.no_password=\u767b\u5f55\u5230\u5728\u7ebf\u5b58\u50a8
 #orig#status_tab.online_storage.no_password.tips=Click here to enter account password
 status_tab.online_storage.no_password.tips=\u70b9\u51fb\u8fd9\u91cc\u4ee5\u8f93\u5165\u8d26\u6237\u5bc6\u7801
 #orig#status_tab.online_storage.not_setup=Not set up yet. Sign up and login here.
-status_tab.online_storage.not_setup=\u8fd8\u6ca1\u6709\u8bbe\u7f6e\u3002\u6ce8\u518c\u5e76\u5728\u8fd9\u91cc\u767b\u5f55\u3002
+status_tab.online_storage.not_setup=\u8fd8\u6ca1\u6709\u8bbe\u7f6e\u3002\u70b9\u51fb\u8fd9\u91cc\u6ce8\u518c\u5e76\u767b\u5f55\u3002
 #orig#status_tab.online_storage.not_setup.tips=Click here to configure account details
 status_tab.online_storage.not_setup.tips=\u70b9\u51fb\u8fd9\u91cc\u914d\u7f6e\u8d26\u6237\u8be6\u60c5
 #orig#status_tab.online_storage.title=Account
 status_tab.online_storage.title=\u8d26\u6237
 #orig#status_tab.online_storage.usage=Online usage\: {0} ({1}%)
-status_tab.online_storage.usage=\u5728\u7ebf\u4f7f\u7528\u7387\: {0} ({1}%)
+status_tab.online_storage.usage=\u7f51\u7edc\u5b58\u50a8\u4f7f\u7528\u7387\: {0} ({1}%)
 status_tab.status=\u72b6\u6001
 #orig#status_tab.sync_eta=Estimated synchronized\: {0}
 status_tab.sync_eta=\u6240\u6709\u5c06\u8981\u540c\u6b65\u7684\u6587\u4ef6\u5939 {0}
@@ -1522,6 +1522,18 @@ main_tabbed_pane.folders.description=\u5176\u5b83PowerFolder\u6587\u4ef6\u5939\u
 main_tabbed_pane.folders.key=F
 #orig#main_tabbed_pane.folders.name=Folders
 main_tabbed_pane.folders.name=\u6587\u4ef6\u5939
+#main_tabbed_pane.status.description=Information about {APPNAME}
+main_tabbed_pane.status.description={APPNAME}\u7684\u76f8\u5173\u4fe1\u606f
+#main_tabbed_pane.status.key=S
+main_tabbed_pane.status.key=S
+#main_tabbed_pane.status.name=Status
+main_tabbed_pane.status.name=\u6982\u51b5
+#main_tabbed_pane.start.key=S
+main_tabbed_pane.start.key=S
+#main_tabbed_pane.start.description=Start using {APPNAME}
+main_tabbed_pane.start.description=\u5f00\u59cb\u4f7f\u7528{APPNAME}
+#main_tabbed_pane.start.name=Start
+main_tabbed_pane.start.name=\u5f00\u59cb
 
 #orig#member.me=Me
 member.me=\u6211
