--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -1,4 +1,4 @@
-#
+##
 # PowerFolder translation file
 #
 # Guide:
@@ -1004,7 +1004,7 @@ files_stats_panel.incoming_label=Verf\u00fcgbar\: {0}
 files_stats_panel.local_label=Lokal\: {0}
 
 #orig#files_tab.combo.deleted_and_previous_files=Deleted and recycled files
-files_tab.combo.deleted_and_previous_files=Gel\u00f6schte und Archivierte Dateien
+files_tab.combo.deleted_and_previous_files=Gel\u00f6schte Dateien
 #orig#files_tab.combo.incoming_files_only=Incoming files only
 files_tab.combo.incoming_files_only=Verf\u00fcgbare Dateien
 #orig#files_tab.combo.local_and_incoming=Local and incoming files
