korrekted spellin errorowz

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -1012,7 +1012,7 @@ files_tab.combo.local_and_incoming=Lokal und verf\u00fcgbare Dateien
 #orig#files_tab.combo.local_files_only=Local files only
 files_tab.combo.local_files_only=Lokale Dateien
 #orig#files_tab.combo.new_files_only=New files only
-files_tab.combo.new_files_only=Neue Datein
+files_tab.combo.new_files_only=Neue Dateien
 #orig#files_tab.combo.tool_tip=Select files to display
 files_tab.combo.tool_tip=Datei-Filter
 #orig#files_tab.flat_view.text=Flat view
