fix chinese translation strings

--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -890,7 +890,7 @@ exp_folder_view.local={0} \u672c\u5730
 #orig#exp_folder_view.members=Members\: {0} ({1} connected)
 exp_folder_view.members=\u6210\u5458\: {0} ({1}\u4e2a\u5df2\u7ecf\u8fde\u63a5)
 #orig#exp_folder_view.never_synchronized=Never synchronized
-exp_folder_view.never_synchronized=\u4ece\u4e0d\u540c\u6b65
+exp_folder_view.never_synchronized=\u65e0\u540c\u6b65\u8bb0\u5f55
 #orig#exp_folder_view.new_files_tip_text={0} new file(s)
 exp_folder_view.new_files_tip_text={0} \u65b0\u6587\u4ef6
 #orig#exp_folder_view.not_yet_scanned=Not yet scanned
@@ -1011,7 +1011,7 @@ files_tab.combo.new_files_only=\u4ec5\u65b0\u6587\u4ef6
 #orig#files_tab.combo.tool_tip=Select files to display
 files_tab.combo.tool_tip=\u9009\u62e9\u8981\u663e\u793a\u7684\u6587\u4ef6
 #orig#files_tab.flat_view.text=Flat view
-files_tab.flat_view.text=\u5e73\u677f\u89c6\u529b
+files_tab.flat_view.text=\u5e73\u677f\u89c6\u56fe
 #orig#files_tab.flat_view.tip=Flatten view of folder directory structure
 files_tab.flat_view.tip=\u6587\u4ef6\u5939\u76ee\u5f55\u7ed3\u6784\u7684\u5e73\u677f\u89c6\u56fe
 
