add chinese translation strings

--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -64,6 +64,14 @@ about_dialog.system_monitor.key=M
 about_dialog.system_monitor.text=\u76d1\u63a7
 #orig#about_dialog.system_monitor.tips=Display a system monitor panel
 about_dialog.system_monitor.tips=\u663e\u793a\u7cfb\u7edf\u76d1\u63a7\u9762\u677f
+
+#orig#about_dialog.activate.key=A
+about_dialog.activate.key=A
+#orig#about_dialog.activate.text=Activate
+about_dialog.activate.text=\u6fc0\u6d3b
+#orig#about_dialog.activate.tips=Activates PowerFolder with new license
+about_dialog.activate.tips=\u4f7f\u7528\u65b0\u7684\u6388\u6743\u6fc0\u6d3bPowerFolder
+
 #orig#about_dialog.team=Team
 about_dialog.team=\u5f00\u53d1\u56e2\u961f
 #orig#about_dialog.title=About {APPNAME}
@@ -2730,6 +2738,10 @@ wizard.what_to_do.backup_folder.tip=\u9009\u62e9\u8fd9\u4e2a\u9009\u9879\u5c06\u
 wizard.what_to_do.custom_sync=\u9ad8\u7ea7\u8bbe\u7f6e
 #orig#wizard.what_to_do.custom_sync.tip=Choose this option to configure customized file transfer modes
 wizard.what_to_do.custom_sync.tip=\u9009\u62e9\u8fd9\u4e2a\u9009\u9879\u6765\u914d\u7f6e\u81ea\u5b9a\u4e49\u6587\u4ef6\u4f20\u8f93\u6a21\u5f0f
+#orig#wizard.what_to_do.download=Download files
+wizard.what_to_do.download=\u4e0b\u8f7d\u6587\u4ef6
+#orig#wizard.what_to_do.download.tip=Automatically downloads or restores files
+wizard.what_to_do.download.tip=\u81ea\u52a8\u4e0b\u8f7d\u6216\u6062\u590d\u6587\u4ef6
 #orig#wizard.what_to_do.folder_backup_success=You successfully set up a folder backup\!\n
 wizard.what_to_do.folder_backup_success=\u4f60\u5df2\u7ecf\u6210\u529f\u8bbe\u7f6e\u6587\u4ef6\u5939\u5907\u4efd\uff01\n
 #orig#wizard.what_to_do.folder_host_success=You successfully set up a host folder\!\n
@@ -2748,6 +2760,10 @@ wizard.what_to_do.invite.select_local=\u8bf7\u4e3a\u6587\u4ef6\u9009\u62e9\u672c
 wizard.what_to_do.load_invite=\u6253\u5f00\u9080\u8bf7\u6587\u4ef6
 #orig#wizard.what_to_do.load_invite.tip=Choose this option to setup a folder from an invitation
 wizard.what_to_do.load_invite.tip=\u9009\u62e9\u8fd9\u4e2a\u9009\u9879\u4ece\u9080\u8bf7\u6587\u4ef6\u8bbe\u7f6e\u6587\u4ef6\u5939
+#orig#wizard.what_to_do.more=Show more options
+wizard.what_to_do.more=\u663e\u793a\u66f4\u591a\u9009\u9879
+#orig#wizard.what_to_do.more.tip=Shows advance options
+wizard.what_to_do.more.tip=\u663e\u793a\u9ad8\u7ea7\u9009\u9879
 #orig#wizard.what_to_do.no_login=Not logged in. Please login first or wait to get connected.
 wizard.what_to_do.no_login=\u6ca1\u6709\u767b\u5f55\u3002\u8bf7\u5148\u767b\u5f55\u6216\u7b49\u5f85\u8fde\u63a5\u3002
 #orig#wizard.what_to_do.no_os_text=There are no online folders available that\ncould be synced with this computer.
